# locallora

./: .gitignore  README.md  RUNBOOK.md  Setup-Notes-Config.md  chat_with_model.py  config.yml  estimate_training.py  processgravitydocs.py  pyproject.toml  scrape_gravity_papers.py  train_lora.py  train_mlx.py
docs/: index.html
